--- a/Pages/pedido.html
+++ b/Pages/pedido.html
@@ -20,10 +20,10 @@
 <body>
 <header>
     <nav>
-      <a href="../index.html"><img src="../Assets/pizza-logo-cartoon-this-logo-is-highly-suitable-for-any-pizza-related-restaurant-fast-food-delivery-bistro-catering-and-italian-food-related-businesses-vector.jpg" id="logo"alt="logo">
+      <a href="../index.html"><img src="../assets/pizza-logo-cartoon-this-logo-is-highly-suitable-for-any-pizza-related-restaurant-fast-food-delivery-bistro-catering-and-italian-food-related-businesses-vector.jpg" id="logo"alt="logo">
       </a><div>
-        <a href="../pages/login.html">Login</a>
-        <a href="../pages/pedido.html"><img src="../Assets/2453.png" alt="delivery"><span id="cantidad-pedido">0</span></a>
+        <a href="../Pages/login.html">Login</a>
+        <a href="../Pages/pedido.html"><img src="../assets/2453.png" alt="delivery"><span id="cantidad-pedido">0</span></a>
         <ul id="lista-productos"></ul>
       </div>
     </nav>
