actualizar el .gitignore y README.md

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     <h1 class="Titulo" id="titulo_principal">PizzeriaRoz</h1>
   
 
-<section id="productos-container"></section>
+<section id="productos-container">
+    
+</section>
 </main>
 <footer>
     <p class="footer" id="footer_fin">_________________________________________________________________________________________</p>
