--- a/Pages/login.html
+++ b/Pages/login.html
@@ -3,17 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="keywords" content="pizzas-empanadas,online,registro capital federal">
+    <meta name="description" content="pizzas variadas. empanadas variadas,promos variados. local en el barrio Almagro.">
+    <meta name="author" content="Pizzeria-Login">
+    <meta name="copyright" content="PizzeriaRoz2024">
+    <meta property="og:title"content="Pizzas-Empanadas-click-Registro en Login">
+    <meta property="og:description"content="pizzas variadas. empanadas variadas,promos variados. local en el barrio Almagro.">
+    <meta property="og:url"content="https://github.com/paularoz26/PIZZAS-EMPANADAS/blob/main/index.html">
+    <meta property="og:locale"content="">
+    <meta property="or:article:author"content="">
     <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
     <link rel="stylesheet" href="sweetalert2.min.css">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
-    <link rel="shortcut icon" href="./assets/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/e56b841924ac729935e858cb59535fb7.png" type="image/x-icon">
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../Style/style.css">
+    <link rel="stylesheet" href="../Style/style.css"> 
+ <title>Pizzeria-Login</title>
 </head>
 <body id="fondo-login"> 
    
