--- a/Pages/pedido.html
+++ b/Pages/pedido.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="pizzas-empanadas,pedido,online, capital federal">
+    <meta name="description" content="pizzas variadas. empanadas variadas,promos variados. local en el barrio Almagro.">
+    <meta name="author" content="PizzeriaRoz-Pedido">
+    <meta name="copyright" content="PizzeriaRoz2024">
+    <meta property="og:title"content="Pizzas-Empanadas-click-Pedido-YA">
+    <meta property="og:description"content="pizzas variadas. empanadas variadas,promos variados. local en el barrio Almagro.">
+    <meta property="og:url"content="https://github.com/paularoz26/PIZZAS-EMPANADAS/blob/main/index.html">
+    <meta property="og:locale"content="">
+    <meta property="or:article:author"content="">
     <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
     <link rel="stylesheet" href="sweetalert2.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
@@ -10,10 +19,10 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
-    <link rel="shortcut icon" href="./assets/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/pizza-delivery-with-shopping-cart-logo-free-vector.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../Style/style.css">
-       <title>PizzeriaRoz</title>
+       <title>PizzeriaRoz-Pedido</title>
   
   
 </head>
