--- a/index.html
+++ b/index.html
@@ -3,18 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
+    <meta name="keywords" content="pizzas-empanadas,online, capital federal">
+    <meta name="description" content="pizzas variadas. empanadas variadas,promos variados. local en el barrio Almagro.">
+    <meta name="author" content="PizzeriaRoz">
+    <meta name="copyright" content="PizzeriaRoz2024">
+    <meta property="og:title"content="Pizzas-Empanadas-click">
+    <meta property="og:description"content="pizzas variadas. empanadas variadas,promos variados. local en el barrio Almagro.">
+    <meta property="og:url"content="https://github.com/paularoz26/PIZZAS-EMPANADAS/blob/main/index.html">
+    <meta property="og:locale"content="">
+    <meta property="or:article:author"content="">
+     <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
     <link rel="stylesheet" href="sweetalert2.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
-    <link rel="shortcut icon" href="./assets/logo.ico" type="image/x-icon">
-    
+    <link rel="shortcut icon" href="./assets/pizza-logo-cartoon-this-logo-is-highly-suitable-for-any-pizza-related-restaurant-fast-food-delivery-bistro-catering-and-italian-food-related-businesses-vector.jpg" type="image/x-icon">
+  
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
    <link rel="stylesheet" href="./Style/style.css">
-       <title>PizzeriaRoz</title>
+       <title>PizzeriaRoz-Home</title>
   
   
 </head>
@@ -41,6 +50,9 @@
 <footer>
     <p class="footer" id="footer_fin">_________________________________________________________________________________________</p>
 </footer>
+<section class="fixed">
+    <a class="menu-fixed" href="./Pages/pedido.html"><img src="./assets/pizza-delivery-with-shopping-cart-logo-free-vector.jpg" width="60" height="60"></a>
+  </section>
 <section class="pie-pagina">
     <div class="container-pie">
     <div class="footer-pie">
