--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
 </section>
   
-<p class="footer" id="footer_fin">2024 PizzeriaRoz</p>
+<p class="footer" id="footer_fin">PizzeriaRoz-2024</p>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
