--- a/Pages/pedido.html
+++ b/Pages/pedido.html
@@ -22,7 +22,7 @@
     <link rel="shortcut icon" href="./assets/pizza-delivery-with-shopping-cart-logo-free-vector.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../Style/style.css">
-       <title>PizzeriaRoz-Pedido</title>
+       <title>Pizzeria-Pedido</title>
   
   
 </head>
