--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
  
 
    <section class="footer-redes">
-    <h3>Nuestras Redes;</h3>
+    <h3>Nuestras Redes:</h3>
     <article class="redes-sociales">
     <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook" style="font-size:40px";></i></a> 
     <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram" style="font-size:40px"; ></i></a>
