--- a/Pages/pedido.html
+++ b/Pages/pedido.html
@@ -65,7 +65,7 @@
 </main>
 </div>  
 <footer>
-<p class="footer" id="footer_fin">2024 PizzeriaRoz</p>
+<p class="footer" id="footer_fin">PizzeriaRoz-2024</p>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
