--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
            <textarea required name="message" class="form-control"></textarea></div>
         <button type="submit">ENVIAR</button>
     </article>
- 
+    <article class="footer-redes">
+    <h3>whatsapp;</h3>
+    <p>011-5592-7423</p>
+    <img class="whatsapp1"src="./assets/426211474_1081279883139957_8603975183651849225_n.jpg" width="60"height="60"></img>
+</article>
 
    <section class="footer-redes">
     <h3>Nuestras Redes:</h3>
