--- a/Pages/pedido.html
+++ b/Pages/pedido.html
@@ -64,6 +64,9 @@
 
 </main>
 </div>  
+<section class="fixed">
+  <a class="menu-fixed" href="../Pages/login.html"><img src="../assets/e56b841924ac729935e858cb59535fb7.png" width="60" height="60"></a>
+  </section>
 <footer>
 <p class="footer" id="footer_fin">PizzeriaRoz-2024</p>
 </footer>
