--- a/Pages/login.html
+++ b/Pages/login.html
@@ -18,7 +18,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
-    <link rel="shortcut icon" href="./assets/e56b841924ac729935e858cb59535fb7.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/e56b841924ac729935e858cb59535fb7.png" type="image/x-icon">
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../Style/style.css"> 
