--- a/Pages/pedido.html
+++ b/Pages/pedido.html
@@ -19,7 +19,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
-    <link rel="shortcut icon" href="./assets/pizza-delivery-with-shopping-cart-logo-free-vector.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/pizza-delivery-with-shopping-cart-logo-free-vector.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../Style/style.css">
        <title>Pizzeria-Pedido</title>
