--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
     <h1 class="Titulo" id="titulo_principal">PizzeriaRoz</h1>
   
 
-<section id="productos-container">
-    
-</section>
+<section id="productos-container"></section>
 </main>
 <section class="fixed">
 <a class="menu-fixed" href="./Pages/pedido.html"><img src="./assets/pizza-delivery-with-shopping-cart-logo-free-vector.jpg" width="60" height="60"></a>
@@ -81,7 +79,7 @@
    <section class="footer-redes">
     <h3>Nuestras Redes:</h3>
     <article class="redes-sociales">
-    <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook" style="font-size:40px";></i></a><br>
+    <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook" style="font-size:40px";></i></a>
     <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram" style="font-size:40px"; ></i></a>
     
     </article> 
